part2/2.10/kube/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: project
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /todo-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: project-strip-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 2345
          - path: /todo-api
            pathType: Prefix
            backend:
              service:
                name: todo-api-svc
                port:
                  number: 2346
